# soup

./: .gitignore  Cargo.toml  README.md
src/: main.rs  middleware.rs
src/middleware/: logger.rs
src/stores/: mod.rs
src/views/: css.rs  index.rs  mod.rs
