[package]
name = "soup"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/soup"
documentation = "https://docs.rs/soup"
description = "Soup pics online."
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
structopt = "0.2.18"
log = "0.4.7"
tide = "0.2.0"
memdb = "1.0.0"
femme = "1.0.0"
tachyons = "0.1.1"
runtime = "0.3.0-alpha.6"
http-service-hyper = "0.3.0"
futures-preview = "0.3.0-alpha.17"

[patch.crates-io]
tide = { path = "../../rustasync/tide" }
http-service = { git = "https://github.com/rustasync/http-service", branch = "master" }
http-service-hyper = { git = "https://github.com/rustasync/http-service", branch = "master" }
